@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004-2024 The MZmine Development Team
+ * Copyright (c) 2004-2025 The mzmine Development Team
  *
  * Permission is hereby granted, free of charge, to any person
  * obtaining a copy of this software and associated documentation
@@ -25,6 +25,8 @@
 
 package io.github.mzmine.modules.visualization.featurelisttable_modular;
 
+import static java.util.Objects.requireNonNullElse;
+
 import com.google.common.collect.Range;
 import io.github.mzmine.datamodel.FeatureIdentity;
 import io.github.mzmine.datamodel.FeatureStatus;
@@ -40,6 +42,7 @@ import io.github.mzmine.datamodel.Scan;
 import io.github.mzmine.datamodel.featuredata.IonMobilogramTimeSeries;
 import io.github.mzmine.datamodel.featuredata.IonTimeSeries;
 import io.github.mzmine.datamodel.features.Feature;
+import io.github.mzmine.datamodel.features.FeatureList;
 import io.github.mzmine.datamodel.features.FeatureListRow;
 import io.github.mzmine.datamodel.features.ModularFeature;
 import io.github.mzmine.datamodel.features.ModularFeatureListRow;
@@ -55,19 +58,24 @@ import io.github.mzmine.datamodel.features.types.annotations.LipidMatchListType;
 import io.github.mzmine.datamodel.features.types.annotations.iin.IonIdentityListType;
 import io.github.mzmine.datamodel.features.types.fx.ColumnType;
 import io.github.mzmine.datamodel.features.types.modifiers.AnnotationType;
-import io.github.mzmine.gui.mainwindow.SimpleTab;
+import io.github.mzmine.datamodel.identities.iontype.IonModification;
+import io.github.mzmine.datamodel.identities.iontype.IonType;
 import io.github.mzmine.javafx.concurrent.threading.FxThread;
 import io.github.mzmine.main.MZmineCore;
 import io.github.mzmine.modules.dataprocessing.featdet_manual.XICManualPickerModule;
+import io.github.mzmine.modules.dataprocessing.filter_deleterows.DeleteRowsModule;
+import io.github.mzmine.modules.dataprocessing.id_addmanualcomp.CompoundAnnotationController;
 import io.github.mzmine.modules.dataprocessing.id_biotransformer.BioTransformerModule;
 import io.github.mzmine.modules.dataprocessing.id_formulaprediction.FormulaPredictionModule;
 import io.github.mzmine.modules.dataprocessing.id_lipidid.common.identification.matched_levels.MatchedLipid;
 import io.github.mzmine.modules.dataprocessing.id_nist.NistMsSearchModule;
+import io.github.mzmine.modules.dataprocessing.id_pubchemsearch.gui.PubChemResultsController;
 import io.github.mzmine.modules.dataprocessing.id_spectral_library_match.SpectralLibrarySearchModule;
 import io.github.mzmine.modules.io.export_features_gnps.masst.GnpsMasstSubmitModule;
 import io.github.mzmine.modules.io.export_features_sirius.SiriusExportModule;
 import io.github.mzmine.modules.io.export_image_csv.ImageToCsvExportModule;
 import io.github.mzmine.modules.io.spectraldbsubmit.view.MSMSLibrarySubmissionWindow;
+import io.github.mzmine.modules.tools.fraggraphdashboard.FragDashboardTab;
 import io.github.mzmine.modules.visualization.chromatogram.ChromatogramVisualizerModule;
 import io.github.mzmine.modules.visualization.compdb.CompoundDatabaseMatchTab;
 import io.github.mzmine.modules.visualization.featurelisttable_modular.export.IsotopePatternExportModule;
@@ -83,7 +91,7 @@ import io.github.mzmine.modules.visualization.ims_mobilitymzplot.IMSMobilityMzPl
 import io.github.mzmine.modules.visualization.intensityplot.IntensityPlotModule;
 import io.github.mzmine.modules.visualization.network_overview.NetworkOverviewFlavor;
 import io.github.mzmine.modules.visualization.network_overview.NetworkOverviewWindow;
-import io.github.mzmine.modules.visualization.pseudospectrumvisualizer.PseudoSpectrumVisualizerPane;
+import io.github.mzmine.modules.visualization.pseudospectrumvisualizer.PseudoSpectrumVisualizerTab;
 import io.github.mzmine.modules.visualization.rawdataoverviewims.IMSRawDataOverviewModule;
 import io.github.mzmine.modules.visualization.spectra.matchedlipid.LipidAnnotationMatchTab;
 import io.github.mzmine.modules.visualization.spectra.simplespectra.MultiSpectraVisualizerTab;
@@ -95,25 +103,29 @@ import io.github.mzmine.modules.visualization.spectra.spectralmatchresults.Spect
 import io.github.mzmine.modules.visualization.twod.TwoDVisualizerModule;
 import io.github.mzmine.parameters.parametertypes.selectors.ScanSelection;
 import io.github.mzmine.project.ProjectService;
+import io.github.mzmine.util.FeatureUtils;
 import io.github.mzmine.util.IonMobilityUtils;
 import io.github.mzmine.util.SortingDirection;
 import io.github.mzmine.util.SortingProperty;
+import io.github.mzmine.util.annotations.CompoundAnnotationUtils;
 import io.github.mzmine.util.components.ConditionalMenuItem;
 import io.github.mzmine.util.scans.ScanUtils;
 import io.github.mzmine.util.scans.SpectraMerging;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
+import javafx.beans.property.BooleanProperty;
+import javafx.beans.property.SimpleBooleanProperty;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
+import javafx.event.ActionEvent;
+import javafx.event.EventHandler;
 import javafx.scene.control.ContextMenu;
 import javafx.scene.control.Menu;
 import javafx.scene.control.MenuItem;
@@ -143,7 +155,12 @@ public class FeatureTableContextMenu extends ContextMenu {
   private List<ModularFeatureListRow> selectedRows;
   @Nullable
   private ModularFeature selectedFeature;
+  private @Nullable ModularFeature selectedOrBestFeature;
   private List<FeatureIdentity> copiedIDs;
+
+  private final BooleanProperty hasIonMobilityData = new SimpleBooleanProperty();
+  private final BooleanProperty hasImagingData = new SimpleBooleanProperty();
+  private final BooleanProperty hasPseudoSpectra = new SimpleBooleanProperty();
 
   FeatureTableContextMenu(final FeatureTableFX table) {
     this.table = table;
@@ -163,8 +180,15 @@ public class FeatureTableContextMenu extends ContextMenu {
 
     final MenuItem deleteRowsItem = new ConditionalMenuItem("Delete row(s)",
         () -> !selectedRows.isEmpty());
-    deleteRowsItem.setOnAction(
-        e -> selectedRows.forEach(row -> table.getFeatureList().removeRow(row)));
+    deleteRowsItem.setOnAction(_ -> {
+      if (selectedRows.size() == 1) {
+        table.getSelectionModel().clearSelection();
+        DeleteRowsModule.deleteRows(table.getFeatureList(), selectedRows);
+      } else {
+        table.getSelectionModel().clearSelection();
+        DeleteRowsModule.deleteWithConfirmation(table.getFeatureList(), selectedRows);
+      }
+    });
 
     // final MenuItem addNewRowItem;
     final MenuItem manuallyDefineItem = new ConditionalMenuItem("Define manually",
@@ -176,7 +200,26 @@ public class FeatureTableContextMenu extends ContextMenu {
     getItems().addAll(new SeparatorMenuItem(), manuallyDefineItem, deleteRowsItem);
   }
 
+  public void onFeatureListChanged(FeatureList featureList) {
+    if (featureList == null) {
+      return;
+    }
+    hasIonMobilityData.set(
+        featureList.getRawDataFiles().stream().anyMatch(IMSRawDataFile.class::isInstance));
+    hasImagingData.set(
+        featureList.getRawDataFiles().stream().anyMatch(ImagingRawDataFile.class::isInstance));
+    hasPseudoSpectra.set(
+        featureList.streamFeatures().map(ModularFeature::getMostIntenseFragmentScan)
+            .anyMatch(PseudoSpectrum.class::isInstance));
+  }
+
   private void initIdentitiesMenu() {
+
+    final MenuItem annotateManually = new ConditionalMenuItem("Annotate manually",
+        () -> selectedRow != null);
+    annotateManually.setOnAction(
+        _ -> new CompoundAnnotationController(selectedRow, table).showWindow());
+
     final MenuItem openCompoundIdUrl = new ConditionalMenuItem("Open compound ID URL (disabled)",
         () -> false);
 
@@ -217,10 +260,12 @@ public class FeatureTableContextMenu extends ContextMenu {
         selectedRow.set(dt, newList);
         table.refresh();
       });
+
       final MenuItem clearAllAnnotations = new ConditionalMenuItem(
-          "Clear all " + listType.getHeaderString(), () -> selectedRow.get(listType) != null);
+          "Clear all " + listType.getHeaderString(),
+          () -> selectedRows.stream().anyMatch(row -> row.get(listType) != null));
       clearAllAnnotations.setOnAction(e -> {
-        selectedRow.set(listType, null);
+        selectedRows.forEach(r -> r.set(listType, null));
         table.refresh();
       });
       clearAnnotationsMenu.getItems()
@@ -234,13 +279,13 @@ public class FeatureTableContextMenu extends ContextMenu {
       final FeatureAnnotation annotation = getAnnotationForBioTransformerPrediction();
       if (annotation != null) {
         BioTransformerModule.runSingleRowPredection(selectedRow, annotation.getSmiles(),
-            Objects.requireNonNullElse(annotation.getCompoundName(), "UNKNOWN"));
+            requireNonNullElse(annotation.getCompoundName(), "UNKNOWN"));
       }
     });
 
     idsMenu.getItems()
-        .addAll(openCompoundIdUrl, copyIdsItem, pasteIdsItem, clearIdsItem, bioTransformerItem,
-            clearAnnotationsMenu);
+        .addAll(annotateManually, openCompoundIdUrl, copyIdsItem, pasteIdsItem, clearIdsItem,
+            bioTransformerItem, clearAnnotationsMenu);
   }
 
   /**
@@ -295,6 +340,7 @@ public class FeatureTableContextMenu extends ContextMenu {
 
     final MenuItem exportImageToCsv = new ConditionalMenuItem("Export image to .csv",
         () -> !selectedRows.isEmpty() && selectedRows.get(0).hasFeatureType(ImageType.class));
+    exportImageToCsv.visibleProperty().bind(hasImagingData);
     exportImageToCsv.setOnAction(
         e -> ImageToCsvExportModule.showExportDialog(selectedRows, Instant.now()));
 
@@ -327,8 +373,35 @@ public class FeatureTableContextMenu extends ContextMenu {
     formulaPredictionItem.setOnAction(
         e -> FormulaPredictionModule.showSingleRowIdentificationDialog(selectedRows.get(0)));
 
+    final MenuItem fragmentDashboardItem = new ConditionalMenuItem(
+        "Open in fragmentation dashboard",
+        () -> selectedRow != null && selectedRow.getMostIntenseFragmentScan() != null);
+    fragmentDashboardItem.setOnAction(e -> {
+      FragDashboardTab.addNewTab(null, selectedRow, null);
+    });
+
+    final MenuItem searchFormulaPubChem = new ConditionalMenuItem("Search formula in PubChem",
+        () -> selectedRow != null && CompoundAnnotationUtils.getBestFormula(selectedRow) != null);
+    searchFormulaPubChem.setOnAction(e -> {
+      final List<IonType> ionTypes = FeatureUtils.extractAllIonTypes(selectedRow);
+      new PubChemResultsController(selectedRow,
+          ionTypes.isEmpty() ? new IonType(IonModification.H) : ionTypes.getFirst(),
+          CompoundAnnotationUtils.getBestFormula(selectedRow)).showInWindow();
+    });
+
+    final MenuItem searchMassPubChem = new ConditionalMenuItem("Search mass in PubChem",
+        () -> selectedRow != null);
+    searchMassPubChem.setOnAction(e -> {
+      final List<IonType> ionTypes = FeatureUtils.extractAllIonTypes(selectedRow);
+      final IonType ionType =
+          ionTypes.isEmpty() ? new IonType(IonModification.H) : ionTypes.getFirst();
+      new PubChemResultsController(selectedRow, ionType,
+          ionType.getMass(selectedRow.getAverageMZ())).showInWindow();
+    });
+
     searchMenu.getItems().addAll(spectralDbSearchItem, nistSearchItem, new SeparatorMenuItem(),
-        formulaPredictionItem, new SeparatorMenuItem(), masstSearch);
+        formulaPredictionItem, fragmentDashboardItem, new SeparatorMenuItem(), masstSearch,
+        new SeparatorMenuItem(), searchMassPubChem, searchFormulaPubChem);
   }
 
   private void initShowMenu() {
@@ -354,14 +427,16 @@ public class FeatureTableContextMenu extends ContextMenu {
             selectedFeature != null ? selectedFeature.getRawDataFile() : null));
 
     final MenuItem showIMSFeatureItem = new ConditionalMenuItem("Ion mobility trace",
-        () -> !selectedRows.isEmpty() && selectedFeature != null
-            && selectedFeature.getRawDataFile() instanceof IMSRawDataFile);
+        () -> !selectedRows.isEmpty() && selectedOrBestFeature != null
+            && selectedOrBestFeature.getRawDataFile() instanceof IMSRawDataFile);
+    showIMSFeatureItem.visibleProperty().bind(hasIonMobilityData);
     showIMSFeatureItem.setOnAction(
-        e -> MZmineCore.getDesktop().addTab(new IMSFeatureVisualizerTab(selectedFeature)));
+        e -> MZmineCore.getDesktop().addTab(new IMSFeatureVisualizerTab(selectedOrBestFeature)));
 
     final MenuItem showImageFeatureItem = new ConditionalMenuItem("Image",
-        () -> !selectedRows.isEmpty() && selectedFeature != null
-            && selectedFeature.getRawDataFile() instanceof ImagingRawDataFile);
+        () -> !selectedRows.isEmpty() && selectedOrBestFeature != null
+            && selectedOrBestFeature.getRawDataFile() instanceof ImagingRawDataFile);
+    showImageFeatureItem.visibleProperty().bind(hasImagingData);
     showImageFeatureItem.setOnAction(e -> {
       ImageVisualizerParameters params = (ImageVisualizerParameters) MZmineCore.getConfiguration()
           .getModuleParameters(ImageVisualizerModule.class).cloneParameterSet();
@@ -369,85 +444,89 @@ public class FeatureTableContextMenu extends ContextMenu {
           MZmineCore.getConfiguration().getImageNormalization());
       params.setParameter(ImageVisualizerParameters.imageTransformation,
           MZmineCore.getConfiguration().getImageTransformation());// same as in feature table.
-      MZmineCore.getDesktop().addTab(new ImageVisualizerTab(selectedFeature, params));
+      MZmineCore.getDesktop().addTab(new ImageVisualizerTab(selectedOrBestFeature, params));
     });
 
     //TODO find better solution to check if single feature list row has co-located images
     final MenuItem showCorrelatedImageFeaturesItem = new ConditionalMenuItem("Co-located images",
-        () -> {
-          return (!selectedRows.isEmpty() && selectedFeature != null
-              && selectedFeature.getRawDataFile() instanceof ImagingRawDataFile
-              && selectedRowHasCorrelationData());
-        });
+        () -> (!selectedRows.isEmpty() && selectedOrBestFeature != null
+            && selectedOrBestFeature.getRawDataFile() instanceof ImagingRawDataFile
+            && selectedRowHasCorrelationData()));
+    showCorrelatedImageFeaturesItem.visibleProperty().bind(hasImagingData);
     showCorrelatedImageFeaturesItem.setOnAction(e -> {
       showCorrelatedImageFeatures();
     });
 
     final MenuItem show2DItem = new ConditionalMenuItem("Feature in 2D",
-        () -> selectedFeature != null);
-    show2DItem.setOnAction(
-        e -> TwoDVisualizerModule.show2DVisualizerSetupDialog(selectedFeature.getRawDataFile(),
-            selectedFeature.getRawDataPointsMZRange(), selectedFeature.getRawDataPointsRTRange()));
+        () -> !selectedRows.isEmpty());
+    show2DItem.setOnAction(e -> TwoDVisualizerModule.show2DVisualizerSetupDialog(
+        selectedOrBestFeature.getRawDataFile(), selectedOrBestFeature.getRawDataPointsMZRange(),
+        selectedOrBestFeature.getRawDataPointsRTRange()));
 
-    final MenuItem show3DItem = new ConditionalMenuItem("Feature in 3D",
-        () -> selectedFeature != null);
-    show3DItem.setOnAction(
-        e -> Fx3DVisualizerModule.setupNew3DVisualizer(selectedFeature.getRawDataFile(),
-            selectedFeature.getRawDataPointsMZRange(), selectedFeature.getRawDataPointsRTRange(),
-            selectedFeature));
+    final MenuItem show3DItem = new ConditionalMenuItem("Feature in 3D", () -> selectedRow != null);
+    show3DItem.setOnAction(open3DFeaturePlot());
 
     final MenuItem showIntensityPlotItem = new ConditionalMenuItem(
-        "Plot using Intensity plot module",
-        () -> !selectedRows.isEmpty() && selectedFeature != null);
+        "Plot using Intensity plot module", () -> !selectedRows.isEmpty());
     showIntensityPlotItem.setOnAction(e -> IntensityPlotModule.showIntensityPlot(
-        ProjectService.getProjectManager().getCurrentProject(), selectedFeature.getFeatureList(),
+        ProjectService.getProjectManager().getCurrentProject(), selectedRow.getFeatureList(),
         selectedRows.toArray(new ModularFeatureListRow[0])));
 
     final MenuItem showInIMSRawDataOverviewItem = new ConditionalMenuItem(
-        "Show m/z ranges in IMS raw data overview",
-        () -> selectedFeature != null && selectedFeature.getRawDataFile() instanceof IMSRawDataFile
-            && !selectedFeatures.isEmpty());
+        "Show m/z ranges in IMS raw data overview", () -> selectedOrBestFeature != null
+        && selectedOrBestFeature.getRawDataFile() instanceof IMSRawDataFile);
+    showInIMSRawDataOverviewItem.visibleProperty().bind(hasIonMobilityData);
     showInIMSRawDataOverviewItem.setOnAction(
         e -> IMSRawDataOverviewModule.openIMSVisualizerTabWithFeatures(
-            getFeaturesFromSelectedRaw(selectedFeatures)));
+            getSelectedOrBestFeaturesFromSameRaw()));
 
     final MenuItem showInMobilityMzVisualizerItem = new ConditionalMenuItem(
-        "Plot mobility/CCS vs. m/z", () -> !selectedRows.isEmpty());
+        "Plot mobility/CCS vs. m/z", () -> !selectedRows.isEmpty() && hasIonMobilityData.get());
+    showInMobilityMzVisualizerItem.visibleProperty().bind(hasIonMobilityData);
     showInMobilityMzVisualizerItem.setOnAction(e -> {
       IMSMobilityMzPlotModule.visualizeFeaturesInNewTab(selectedRows, false);
     });
 
     final MenuItem showSpectrumItem = new ConditionalMenuItem("Mass spectrum",
-        () -> selectedFeature != null && selectedFeature.getRepresentativeScan() != null);
+        () -> selectedOrBestFeature != null
+            && selectedOrBestFeature.getRepresentativeScan() != null);
     showSpectrumItem.setOnAction(
-        e -> SpectraVisualizerModule.addNewSpectrumTab(selectedFeature.getRawDataFile(),
-            selectedFeature.getRepresentativeScan(), selectedFeature));
+        e -> SpectraVisualizerModule.addNewSpectrumTab(selectedOrBestFeature.getRawDataFile(),
+            selectedOrBestFeature.getRepresentativeScan(), selectedOrBestFeature));
 
     final MenuItem showFeatureFWHMMs1Item = new ConditionalMenuItem(
         "Accumulated mass spectrum (FWHM)",
-        () -> selectedFeature != null && selectedFeature.getFeatureData() != null);
+        () -> selectedOrBestFeature != null && selectedOrBestFeature.getFeatureData() != null);
     showFeatureFWHMMs1Item.setOnAction(e -> {
-      final Float fwhm = selectedFeature.getFWHM();
+      final List<Scan> scans;
+      final ModularFeature feature = selectedOrBestFeature;
+      final Float fwhm = feature.getFWHM();
       if (fwhm != null) {
-        final Range<Float> range = Range.closed(selectedFeature.getRT() - fwhm / 2,
-            selectedFeature.getRT() + fwhm / 2);
-        List<Scan> scans = (List<Scan>) selectedFeature.getFeatureData().getSpectra().stream()
+        final Range<Float> range = Range.closed(feature.getRT() - fwhm / 2,
+            feature.getRT() + fwhm / 2);
+        scans = (List<Scan>) feature.getFeatureData().getSpectra().stream()
             .filter(s -> range.contains(s.getRetentionTime())).toList();
-        MergedMassSpectrum spectrum = SpectraMerging.mergeSpectra(scans,
-            SpectraMerging.defaultMs1MergeTol, MergingType.ALL_ENERGIES, null);
-        SpectraVisualizerModule.addNewSpectrumTab(spectrum);
+      } else {
+        // in case no FWHM is present just merge all scans
+        scans = List.copyOf(feature.getFeatureData().getSpectra());
       }
+      MergedMassSpectrum spectrum = SpectraMerging.mergeSpectra(scans,
+          SpectraMerging.defaultMs1MergeTol, MergingType.ALL_ENERGIES, null);
+      SpectraVisualizerModule.addNewSpectrumTab(spectrum);
     });
 
     final MenuItem showBestMobilityScanItem = new ConditionalMenuItem("Best mobility scan",
-        () -> selectedFeature != null && selectedFeature.getRepresentativeScan() instanceof Frame
-            && selectedFeature.getFeatureData() instanceof IonMobilogramTimeSeries);
+        () -> selectedOrBestFeature != null
+            && selectedOrBestFeature.getRepresentativeScan() instanceof Frame
+            && selectedOrBestFeature.getFeatureData() instanceof IonMobilogramTimeSeries);
+    showBestMobilityScanItem.visibleProperty().bind(hasIonMobilityData);
     showBestMobilityScanItem.setOnAction(e -> SpectraVisualizerModule.addNewSpectrumTab(
-        IonMobilityUtils.getBestMobilityScan(selectedFeature)));
+        IonMobilityUtils.getBestMobilityScan(selectedOrBestFeature)));
 
     final MenuItem extractSumSpectrumFromMobScans = new ConditionalMenuItem(
-        "Extract spectrum from mobility FWHM", () -> selectedFeature != null
-        && selectedFeature.getFeatureData() instanceof IonMobilogramTimeSeries);
+        "Extract spectrum from mobility FWHM", () -> selectedOrBestFeature != null
+        && selectedOrBestFeature.getFeatureData() instanceof IonMobilogramTimeSeries);
+    extractSumSpectrumFromMobScans.visibleProperty().bind(hasIonMobilityData);
     extractSumSpectrumFromMobScans.setOnAction(e -> {
       Range<Float> fwhm = IonMobilityUtils.getMobilityFWHM(
           ((IonMobilogramTimeSeries) selectedFeature.getFeatureData()).getSummedMobilogram());
@@ -464,11 +543,11 @@ public class FeatureTableContextMenu extends ContextMenu {
     final MenuItem showMSMSItem = new ConditionalMenuItem("Most intense MS/MS",
         () -> (selectedRow != null && getNumberOfFeaturesWithFragmentScans(selectedRow) >= 1) || (
             selectedFeature != null && selectedFeature.getMostIntenseFragmentScan() != null) || (
-            selectedRows.size() > 1 && getNumberOfRowsWithFragmentScans(selectedRows) > 1));
+            selectedRows.size() > 1 && getNumberOfRowsWithFragmentScans(selectedRows) >= 1));
     showMSMSItem.setOnAction(e -> {
       if (selectedFeature != null && selectedFeature.getMostIntenseFragmentScan() != null) {
         SpectraVisualizerModule.addNewSpectrumTab(selectedFeature.getMostIntenseFragmentScan());
-      } else if (selectedRows.size() > 1 && getNumberOfRowsWithFragmentScans(selectedRows) > 1) {
+      } else if (selectedRows.size() > 1 && getNumberOfRowsWithFragmentScans(selectedRows) >= 1) {
         SpectraStackVisualizerModule.addMsMsStackVisualizer(selectedRows,
             table.getFeatureList().getRawDataFiles(), selectedRows.get(0).getRawDataFiles().get(0));
       } else if (selectedRow != null && selectedRow.getMostIntenseFragmentScan() != null) {
@@ -477,18 +556,20 @@ public class FeatureTableContextMenu extends ContextMenu {
     });
 
     final MenuItem showPseudoSpectrumItem = new ConditionalMenuItem("Show Pseudo Spectrum",
-        () -> selectedFeature != null
-            && selectedFeature.getMostIntenseFragmentScan() instanceof PseudoSpectrum);
+        () -> selectedOrBestFeature != null
+            && selectedOrBestFeature.getMostIntenseFragmentScan() instanceof PseudoSpectrum);
+    showPseudoSpectrumItem.visibleProperty().bind(hasPseudoSpectra);
     showPseudoSpectrumItem.setOnAction(e -> showPseudoSpectrum());
 
     final MenuItem showDiaMirror = new ConditionalMenuItem(
-        "DIA spectral mirror: Correlated-to-all signals",
-        () -> selectedFeature != null && selectedFeature.getRawDataFile() instanceof IMSRawDataFile
-            && selectedFeature.getFeatureData() instanceof IonMobilogramTimeSeries
-            && selectedFeature.getMostIntenseFragmentScan() instanceof PseudoSpectrum);
+        "DIA spectral mirror: Correlated-to-all signals", () -> selectedOrBestFeature != null
+        && selectedOrBestFeature.getRawDataFile() instanceof IMSRawDataFile
+        && selectedOrBestFeature.getFeatureData() instanceof IonMobilogramTimeSeries
+        && selectedOrBestFeature.getMostIntenseFragmentScan() instanceof PseudoSpectrum);
+    showDiaMirror.visibleProperty().bind(hasIonMobilityData);
     showDiaMirror.setOnAction(e -> showDiaMirror());
 
-    final MenuItem showMSMSMirrorItem = new ConditionalMenuItem("Mirror MS/MS (2 rows)",
+    final MenuItem showMSMSMirrorItem = new ConditionalMenuItem("Spectral mirror (2 rows)",
         () -> selectedRows.size() == 2 && getNumberOfRowsWithFragmentScans(selectedRows) == 2);
     showMSMSMirrorItem.setOnAction(e -> {
       MirrorScanWindowFXML mirrorScanTab = new MirrorScanWindowFXML();
@@ -528,19 +609,44 @@ public class FeatureTableContextMenu extends ContextMenu {
       }
     });
 
-    final MenuItem showPeakRowSummaryItem = new ConditionalMenuItem("Row(s) summary", () ->
-        /* !selectedRows.isEmpty() */ false); // todo, not implemented yet
+//    final MenuItem showPeakRowSummaryItem = new ConditionalMenuItem("Row(s) summary", () ->
+//        /* !selectedRows.isEmpty() */ false); // todo, not implemented yet
 
     showMenu.getItems()
         .addAll(showXICItem, showXICSetupItem, showIMSFeatureItem, showImageFeatureItem,
-            new SeparatorMenuItem(), showNetworkVisualizerItem,
-            show2DItem, show3DItem, showIntensityPlotItem, showInIMSRawDataOverviewItem,
-            showInMobilityMzVisualizerItem, new SeparatorMenuItem(), showSpectrumItem,
-            showFeatureFWHMMs1Item, showBestMobilityScanItem, extractSumSpectrumFromMobScans,
-            showMSMSItem, showMSMSMirrorItem, showAllMSMSItem, showPseudoSpectrumItem,
-            showDiaMirror, new SeparatorMenuItem(), showIsotopePatternItem, showCompoundDBResults,
+            new SeparatorMenuItem(), showNetworkVisualizerItem, show2DItem, show3DItem,
+            showIntensityPlotItem, showInIMSRawDataOverviewItem, showInMobilityMzVisualizerItem,
+            new SeparatorMenuItem(), showSpectrumItem, showFeatureFWHMMs1Item,
+            showBestMobilityScanItem, extractSumSpectrumFromMobScans, showMSMSItem,
+            showMSMSMirrorItem, showAllMSMSItem, showPseudoSpectrumItem, showDiaMirror,
+            new SeparatorMenuItem(), showIsotopePatternItem, showCompoundDBResults,
             showSpectralDBResults, showMatchedLipidSignals, new SeparatorMenuItem(),
-            showPeakRowSummaryItem, showCorrelatedImageFeaturesItem);
+            showCorrelatedImageFeaturesItem);
+  }
+
+  private @NotNull EventHandler<ActionEvent> open3DFeaturePlot() {
+    return e -> {
+      final List<Feature> features = getSelectedOrBestFeatures();
+      final RawDataFile[] dataFiles = features.stream().map(Feature::getRawDataFile)
+          .toArray(RawDataFile[]::new);
+
+      final Range<Double> mzRange = features.stream().map(Feature::getRawDataPointsMZRange)
+          .reduce(Range::span).orElse(null);
+      final Range<Float> rtRange = features.stream().map(Feature::getRawDataPointsRTRange)
+          .reduce(Range::span).orElse(null);
+
+      Fx3DVisualizerModule.setupNew3DVisualizer(dataFiles, mzRange, rtRange, features);
+    };
+  }
+
+  private @NotNull List<Feature> getSelectedOrBestFeatures() {
+    List<Feature> features = new ArrayList<>();
+    if (selectedFeatures.isEmpty()) {
+      features.addAll(selectedRows.stream().map(ModularFeatureListRow::getBestFeature).toList());
+    } else {
+      features.addAll(selectedFeatures);
+    }
+    return features;
   }
 
   private boolean selectedRowHasCorrelationData() {
@@ -603,6 +709,9 @@ public class FeatureTableContextMenu extends ContextMenu {
       var ip = selectedFeature.getIsotopePattern();
       return ip != null ? Optional.of(selectedFeature) : Optional.empty();
     }
+    if (selectedRow == null) {
+      return Optional.empty();
+    }
     // get best isotope pattern feature
     return selectedRow.streamFeatures().filter(f -> f != null && f.getIsotopePattern() != null
             && f.getFeatureStatus() != FeatureStatus.UNKNOWN)
@@ -617,6 +726,10 @@ public class FeatureTableContextMenu extends ContextMenu {
     selectedRows = table.getSelectedRows();
     selectedFeature = table.getSelectedFeature();
     selectedRow = table.getSelectedRow();
+    selectedOrBestFeature = selectedFeature;
+    if (selectedOrBestFeature == null && selectedRow != null) {
+      selectedOrBestFeature = selectedRow.getBestFeature();
+    }
 
     // for single-raw-file-feature-lists it's intuitive to be able to click on the row columns, too
     if (selectedFeature == null && selectedRows.size() == 1
@@ -700,21 +813,27 @@ public class FeatureTableContextMenu extends ContextMenu {
   }
 
   @NotNull
-  private List<ModularFeature> getFeaturesFromSelectedRaw(Collection<ModularFeature> features) {
-    if (selectedFeature == null || selectedFeature.getRawDataFile() == null) {
-      return Collections.emptyList();
+  private List<Feature> getSelectedOrBestFeaturesFromSameRaw() {
+    final RawDataFile file;
+    if (selectedFeature != null && selectedFeature.getRawDataFile() != null) {
+      file = selectedFeature.getRawDataFile();
+    } else if (selectedRow != null) {
+      file = selectedRow.getBestFeature().getRawDataFile();
+    } else {
+      return List.of();
     }
-    final RawDataFile file = selectedFeature.getRawDataFile();
-    return features.stream().filter(f -> f.getRawDataFile() == file).collect(Collectors.toList());
+    if (!(file instanceof IMSRawDataFile)) {
+      return List.of();
+    }
+    return selectedRows.stream().map(row -> (Feature) row.getFeature(file)).filter(Objects::nonNull)
+        .toList();
   }
 
   private void showPseudoSpectrum() {
-    if (selectedFeature != null) {
-      PseudoSpectrumVisualizerPane pseudoSpectrumVisualizerPane = new PseudoSpectrumVisualizerPane(
-          selectedFeature);
-      SimpleTab simpleTab = new SimpleTab("Pseudo Spectrum of " + selectedFeature.toString(),
-          pseudoSpectrumVisualizerPane);
-      MZmineCore.getDesktop().addTab(simpleTab);
+    if (selectedOrBestFeature != null) {
+      final PseudoSpectrumVisualizerTab tab = new PseudoSpectrumVisualizerTab(table);
+      tab.getController().setFeature(selectedOrBestFeature);
+      MZmineCore.getDesktop().addTab(tab);
     }
   }
 
@@ -729,6 +848,10 @@ public class FeatureTableContextMenu extends ContextMenu {
   }
 
   private void showDiaMirror() {
+    final ModularFeature selectedFeature = selectedOrBestFeature;
+    if (selectedFeature == null) {
+      return;
+    }
     final Scan msms = selectedFeature.getMostIntenseFragmentScan();
     final RawDataFile file = selectedFeature.getRawDataFile();
 
